--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Rss 메일링 서비스</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/common.css">
+    <title>Enjoy IT RSS</title>
+
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css">
+	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/fixedheader/3.1.7/css/fixedHeader.bootstrap4.min.css">
+	<script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+	<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
+	<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
+	<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/fixedheader/3.1.7/js/dataTables.fixedHeader.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="static/common.css">
+
+	<script type="text/javascript" class="init">
+
+
+$(document).ready(function() {
+	var table = $('#example').DataTable( {
+		fixedHeader: true,
+		order: [ 2, 'desc']
+	} );
+} );
+
+
+	</script>
+
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-175057637-1"></script>
 	<script>
@@ -15,8 +36,20 @@
   	gtag('config', 'UA-175057637-1');
 	</script>
 
+
+
 </head>
 <body>
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    {% for message in messages %}
+        <script>
+		alert("{{ message }}");
+        </script>
+    {% endfor %}
+  {% endif %}
+{% endwith %}
+{% block body %}{% endblock %}
 <div class="content">
     <div class="top-content">
         <h3 class="top-desc">이메일을 등록하고 최신 IT 글을 받아보세요.</h3>
@@ -31,37 +64,42 @@
     </div>
     <div class="container">
         <p class="mail-desc">RSS 추가 요청은 yundol@kakao.com으로 문의메일 주세요</p>
+	<div class="row col-md-12 status-box">
+		<div class="col-md-4">
+			오늘 올라온 글
+		</div>
+		<div class="col-md-4">
+			등록된 총 게시글
+		</div>
+		<div class="col-md-4">
+			넣을꺼 생각중
+		</div>
+	</div>
         <div class="row col-md-12">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">
-                <div class="box box__top__border-blue bg-white">
-                    <div class="box__header with-border">
-                        <h3 class="box-title">RSS 사이트 리스트</h3>
-                    </div>
-                    <table class="table table-striped">
-                        <tbody>
-                            {% for item in site_list %}
-                                <tr>
-                                    <td style="cursor:pointer" onclick="window.open('{{ item.src }}'),'',''">{{ item.author }}</td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
+	 <table id="example" class="table table-striped table-bordered" style="width:100%">
+        	<thead>
+            		<tr>
+               		<th>Author</th>
+                	<th>Title</th>
+                	<th>Date</th>
+            		</tr>
+        	</thead>
+        	<tbody>
+		{% for post in post_list %}
+		<tr style="cursor:pointer" onclick="window.open('{{post.link}}'),'',''">
+			<td>{{post.author}}</td>
+			<td>{{post.title}}</td>
+			<td>{{post.date}}</td>
+		</tr>
+		{% endfor %}
+		</tbody>
+		<tfoot></tfoot>
+		</table>
+        	</div>
+    	</div>
 </div>
-
-
-
-
-
     <footer class="footer">
         <p>Copyright © 2020 YUNDOL. All rights reserved.</p>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
