--- a/templates/index.html
+++ b/templates/index.html
@@ -79,9 +79,9 @@ $(document).ready(function() {
 	 <table id="example" class="table table-striped table-bordered" style="width:100%">
         	<thead>
             		<tr>
-               		<th>Author</th>
+               		<th width="25%">Author</th>
                 	<th>Title</th>
-                	<th>Date</th>
+                	<th width="25%">Date</th>
             		</tr>
         	</thead>
         	<tbody>
